--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -22,7 +22,7 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: docker-compose-CICD-AWS-Beanstalk
         environment_name: Dockercomposecicdawsbeanstalk-env
-        version_label: ${{ github.sha }}
+        version_label: 952cdc3bd3c7eabef5600fedac33125e1b939d83
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
         deployment_package: deploy.zip
