--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,9 +20,9 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: docker-compose-CICD-AWS-Beanstalk
-        environment_name: Dockercomposecicdawsbeanstalk-env
-        version_label: 952cdc3bd3c7eabef5600fedac33125e1b939d83
+        application_name: retest-CICD
+        environment_name: Retestcicd-env
+        version_label: 1.1
         use_existing_version_if_available: true
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
