--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -23,6 +23,7 @@ jobs:
         application_name: retest-CICD
         environment_name: Retestcicd-env
         version_label: 1.1
+        use_existing_version_if_available: true
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
         deployment_package: deploy.zip
