--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -22,6 +22,7 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: retest-CICD
         environment_name: Retestcicd-env
+        version_label: 1.1
         use_existing_version_if_available: true
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
