--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,8 +20,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: test-CICD-verionning
-        environment_name: Testcicdverionning-env
+        application_name: CICD-test
+        environment_name: Cicdtest-env
         version_label: 1.3
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
