--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -20,9 +20,9 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: CICD-test
-        environment_name: Cicdtest-env
-        version_label: 1.4
+        application_name: CICD-JBreizh
+        environment_name: Cicdjbreizh-env
+        version_label: 1.1
         existing_bucket_name: elasticbeanstalk-eu-north-1-959799487831
         region: eu-north-1
         deployment_package: deploy.zip
